log
Thu 28 Mar 2024 02:06:55 PM UTC: 
 tests:  0|6
total_score: 0/70
58220fa
Thu 28 Mar 2024 02:12:38 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
05d49f7
Thu 28 Mar 2024 02:14:38 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
14cc0da
Thu 28 Mar 2024 02:15:10 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
8aeaca9
Thu 28 Mar 2024 02:17:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8f52b18
Thu 28 Mar 2024 02:17:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8bf615f
Thu 28 Mar 2024 02:18:32 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f0a11b0
Thu 28 Mar 2024 02:19:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
32a1d82
Thu 28 Mar 2024 02:24:00 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
e423a0e
Thu 28 Mar 2024 02:28:18 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c16f2ef
Thu 28 Mar 2024 02:28:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f64cb18
Thu 28 Mar 2024 02:29:57 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
c3ce356
Thu 28 Mar 2024 02:31:03 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
b75444a
Thu 28 Mar 2024 02:31:41 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
31de791
